# python-framework

./: .env  .flake8  .gitignore  .pypirc  .python-version  Dockerfile  Neuroglia.Python.pyproj  Neuroglia.Python.pyproj.bak  Neuroglia.Python.sln  PythonFramework.sln  README.md  docker-compose.debug.yml  docker-compose.dev.yml  pyproject.toml  pytest.ini  requirements.txt
deployment/mongo/: replica-key
neuroglia/core/: operation_result.py
neuroglia/data/: queryable.py
neuroglia/data/infrastructure/event_sourcing/: abstractions.py
neuroglia/data/infrastructure/memory/: memory_repository.py
neuroglia/hosting/configuration/: data_access_layer.py
neuroglia/mapping/: mapper.py
neuroglia/mvc/: controller_base.py
samples/openbank/: logging.py
samples/openbank/api/: controllers.py  main.py
samples/openbank/application/: TOREMOVE.py  queries.py
samples/openbank/integration/: __init__.py  models.py  person_gender.py
src/Neuroglia.Python/: Neuroglia.Python.pyproj
src/neuroglia/: to_remove - Copy - Copy.py  to_remove - Copy.py  to_remove.py
src/neuroglia/core/: __init__.py  module_loader.py  problem_details.py  type_extensions.py  type_finder.py
src/neuroglia/data/: __init__.py  abstractions.py  queryable.py
src/neuroglia/dependency_injection/: __init__.py  service_provider.py
src/neuroglia/expressions/: javascript_expression_translator.py
src/neuroglia/hosting/: abstractions.py  web.py
src/neuroglia/integration/: models.py
src/neuroglia/logging/: logger.py
src/neuroglia/mapping/: __init__.py  mapper.py
src/neuroglia/mediation/: mediator.py
src/neuroglia/mvc/: controller_base.py
src/neuroglia/reactive/: __init__.py  rx_async.py
src/neuroglia/serialization/: abstractions.py  json.py
tests/: data.py  services.py
tests/Neuroglia.Python.UnitTests/: Neuroglia.Python.UnitTests.pyproj
tests/cases/: test_event_sourcing_repository.py  test_flexible_mongo_repository.py  test_mediator.py  test_mongo_repository.py  test_serializer.py  test_service_provider.py  test_type_extensions.py
tests/services/: services.py
(+80 files in other folders)
